--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-scrollbars-custom": "^4.1.1",
     "react-simple-typewriter": "^5.0.1"
   },
   "scripts": {
