--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-scrollbars-custom": "^4.1.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-simple-typewriter": "^5.0.1"
   },
   "scripts": {
